Final version of the project description. Fixed some bugs.

--- a/labs/labfp/cs380F2014-fp.tex
+++ b/labs/labfp/cs380F2014-fp.tex
@@ -13,10 +13,10 @@
 \section*{Introduction}
 
 Throughout the semester, you have learned more about the basics of data management by studying, in a hands-on fashion,
-topics such as the use of the structured query language, the implementation of database applications, and the creation
-and parsing of XML files.  This final project invites you to explore, in greater detail, an advanced topic in the field
-of databases. You will learn more about how to implement, evaluate, and/or simulate key components or aspects of a
-database. 
+topics such as the use of the structured query language, the implementation of database applications, and the
+creation and parsing of XML files.  This final project invites you to explore, in greater detail, an advanced topic in
+the field of databases. You will learn more about how to implement, evaluate, and/or simulate key components or aspects
+of a database. 
 
 Your project should result in a detailed report that is, ideally, formatted with the \LaTeX\ text processing language
 and suitable for publication in a conference or workshop.  The report should include a description of why the chosen
@@ -35,14 +35,14 @@ the project that you propose.
 \begin{enumerate}
 
   \item {\bf Evaluating the Performance of Relational Databases}: Use and/or extend systems like PolePosition,
-    Database-Benchmark, or HammerDB to measure the performance of different relational databases.  This project would
+    Database-Benchmark, or HammerDB to measure the performance of different relational databases.  This project could
     consider both in-memory databases like HSQLDB and standard databases like SQLite.  Students who select this project
     may also implement their own performance benchmarks for relational databases.  The benchmarks and
     the empirical study should, if possible, consider both the time and space overhead of the database.
 
   \item {\bf Exploring Relational Database Internals}: Implement and test one or more of the key data structures or
     components within a relational database.  For example, you might implement the B+ tree that is described in your
-    textbook, write a JUnit test suite for the B+ tree, and building a simple benchmarking framework to measure the
+    textbook, write a JUnit test suite for the B+ tree, and build a simple benchmarking framework to measure the
     performance of your tree under a variety of workloads.  Alternatively, you may use OpenGL, or other suitable
     technologies, to visualize the behavior of the B+ tree insertion and deletion algorithms.
 
@@ -128,7 +128,7 @@ the project that you propose.
   \item {\bf Implementing a Database Management System}: Figure 1.8 of your textbook gives a simplified overview of the
     architecture of a database management system (DBMS). This project invites students to follow this diagram to
     implement a simple DBMS that can process a subset of the structured query language. After implementing and testing
-    your DBMS, you demonstrate its features and run some benchmarks to evaluate its performance.
+    your DBMS, you should demonstrate its features and run some benchmarks to evaluate its performance.
 
   \item {\bf Student-Designed Project}: You will develop an idea for your own project that focuses on one or more
     advanced topics in data management. After receiving the course instructor's approval for your idea, you will
@@ -145,38 +145,38 @@ This assignment invites you to submit printed and signed versions of the followi
 
   \itemsep0in
 
-  \item {\bf Project Assigned:} April 7, 2014
+  \item {\bf Project Assigned and Project Proposal:} Wednesday, November 19, 2014
 
-    After meeting with your team members, pick a topic for your final project.  Remember, if you select the
+    After meeting with the course instructor, pick a topic for your final project.  Remember, if you select the
     student-designed project, you must first have your project verified by the course instructor.  Next, make sure that
-    you create a Git repository that can be accessed by all members of the team. Finally, write and submit a
-    one-paragraph description of your idea.
+    you create a Git repository that can be accessed by the instructor. Finally, write and submit a one-page proposal
+    for your project. While you can use the project descriptions on the previous pages as a starting point, your
+    proposal should have an informative title, an abstract, a description of the main idea, a plan for completing the
+    work, and an initial listing of the tasks that you must complete.
 
-  \item {\bf Project Proposal}: April 14, 2014
+  \item {\bf Status Update and Project Demonstration}: Wednesday, December 3, 2014
 
-    You and your team will submit a one-page proposal that describes the idea for your final project.  The proposal
-    should have an informative title, an abstract, a description of the main idea, a plan for completing the work, and
-    an initial listing of the roles for \mbox{each member}. 
+    As you continue working on your project, please submit a one paragraph status update in printed form and in through
+    your Git repository.  In addition, you should give a demonstration, during the laboratory session, highlighting the
+    most important part of your system that you have finished implementing. For instance, if you decide to create a
+    benchmarking framework for XML compression algorithms, then you could show how to configure and use the framework,
+    create data sets, and/or visualize the empirical results.
 
-  \item {\bf Status Update}: April 21, 2014
+  \item {\bf Final Project Due Date}: December 12, 2014 at 5 pm
 
-    You and your team will submit a one-page status update that describes the finalized roles of each team member,
-    explains the tasks that you have already completed, and outlines a plan for ensuring that all members can easily
-    contribute to the successful finish of the final project.
-
-  \item {\bf Project Presentations}: April 28, 2014
-
-    Using slides and demonstrations as needed, you and your team will give a short ten-minute presentation of your final
-    results and participate in a five minute question and answer session.
+    You should submit the final version of your project, in printed form and the Git repository. This submission should
+    include all of the relevant source code and output, the written report, and any additional materials that will
+    demonstrate the success of your project.  While you are encouraged to turn in the final project before the final
+    examination starts on the due date, students must submit the completed assignment before 5 pm on the due date.
 
 \end{enumerate}
 \vspace*{-.05in}
 
-In adherence to the honor code, students should complete this assignment while only collaborating with those students
-who are a part of their chosen team. While it is appropriate for students in this class to have high-level
-conversations about the assignment with non-team members, it is necessary to distinguish carefully between the team that
-discusses the principles underlying a problem with others and the team that produces an assignment that is identical to,
-or merely variations on, the work of someone not on the team.  As such, deliverables that are nearly identical to the
-work of others will be taken as evidence of violating the \mbox{Honor Code}.  
+\noindent In adherence to the Honor Code, students should complete this assignment individually. While it is appropriate
+for students in this class to have high-level conversations about the assignment with other class members, it is
+necessary to distinguish carefully between an individual who discusses the principles underlying a problem with others
+and the student who produces an assignment that is identical to, or merely a variation on, the work of someone else.  As
+such, deliverables that are nearly identical to the work of others will be taken as evidence of violating the
+\mbox{Honor Code}.  Students should contact the course instructor with questions about this course policy.
 
   \end{document}
