Fixed a small mistake in the final project description.

--- a/labs/labfp/cs380F2014-fp.tex
+++ b/labs/labfp/cs380F2014-fp.tex
@@ -156,7 +156,7 @@ This assignment invites you to submit printed and signed versions of the followi
 
   \item {\bf Status Update and Project Demonstration}: Wednesday, December 3, 2014
 
-    As you continue working on your project, please submit a one paragraph status update in printed form and in through
+    As you continue working on your project, please submit a one paragraph status update in printed form and through
     your Git repository.  In addition, you should give a demonstration, during the laboratory session, highlighting the
     most important part of your system that you have finished implementing. For instance, if you decide to create a
     benchmarking framework for XML compression algorithms, then you could show how to configure and use the framework,
