--- a/exams/exam3.tex
+++ b/exams/exam3.tex
@@ -104,9 +104,8 @@ status updates.
 
 \item ({\bf 3 Points}) What is {\em meta-data}?  How does the Java
   Database Connectivity (JDBC) interface allow a programmer to access
-  various types of meta-data? Where does a relational database
-  management system (RDBMS) store meta-data?  What type of meta-data
-  does an RDBMS collect?
+  various types of meta-data? What type of meta-data does an RDBMS
+  collect?
 
 \end{enumerate}
 
@@ -626,7 +625,7 @@ status updates.
 \vspace*{-.6in}
 
 \begin{center}
-\includegraphics[totalheight=0.6\textheight]{cputree}
+\includegraphics[totalheight=0.5\textheight]{rp}
 \end{center}
 
 \vspace*{-.65in}
