Moving around the table related to the new attributes. Two good figures.

--- a/exams/exam3.tex
+++ b/exams/exam3.tex
@@ -568,6 +568,34 @@ status updates.
 
 \end{enumerate}
 
+\begin{figure}[h]
+
+  \centering
+
+  \begin{tabular}{c | c}
+
+    {\bf Variable} & {\bf Meaning} \\ \hline
+
+    syct & cycle time in nanoseconds \\ \hline
+
+    mmin & minimum main memory in kilobytes \\ \hline
+
+    mmax & maximum main memory in kilobytes \\ \hline
+
+    cach & cache size in kilobytes \\ \hline
+
+    chmin & minimum number of channels \\ \hline
+
+    chmax & maximum number of channels \\ \hline
+
+    perf & performance of 209 different CPUs
+
+  \end{tabular} 
+  \caption{The Meaning of the Attributes in the Dataset on CPU Performance.}
+
+\end{figure}
+
+
 \end{enumerate}
 
 \begin{figure}[p]
@@ -619,6 +647,7 @@ status updates.
 \label{figure:xml}
 \end{figure}
 
+
 \begin{figure}[p]
 \centering
 
@@ -628,38 +657,17 @@ status updates.
 \includegraphics[totalheight=0.5\textheight]{rp}
 \end{center}
 
-\vspace*{-.65in}
+\begin{center}
+\includegraphics[totalheight=0.5\textheight]{ev}
+\end{center}
+
+\vspace*{-.25in}
 
 \caption{A Regression Tree that Models a CPU Performance Data Set.}
 \label{figure:tree}
 \vspace*{-.25in}
 \end{figure}
 
-\begin{figure}[p]
-
-  \centering
-
-  \begin{tabular}{c | c}
-
-    {\bf Variable} & {\bf Meaning} \\ \hline
-
-    syct & cycle time in nanoseconds \\ \hline
-
-    mmin & minimum main memory in kilobytes \\ \hline
-
-    mmax & maximum main memory in kilobytes \\ \hline
-
-    cach & cache size in kilobytes \\ \hline
-
-    chmin & minimum number of channels \\ \hline
-
-    chmax & maximum number of channels \\ \hline
-
-    perf & performance of 209 different CPUs
-
-  \end{tabular}
-
-\end{figure}
 
 \end{document}
 
