Fixing the caption and formatting for the new regression tree models.

--- a/exams/exam3.tex
+++ b/exams/exam3.tex
@@ -657,13 +657,15 @@ status updates.
 \includegraphics[totalheight=0.5\textheight]{rp}
 \end{center}
 
+\vspace*{-.75in}
+
 \begin{center}
 \includegraphics[totalheight=0.5\textheight]{ev}
 \end{center}
 
 \vspace*{-.25in}
 
-\caption{A Regression Tree that Models a CPU Performance Data Set.}
+\caption{A Regression Tree that Models a Data Set About CPU Performance.}
 \label{figure:tree}
 \vspace*{-.25in}
 \end{figure}
