Fixed the mistakes in the first question of exam3.

--- a/exams/exam3.tex
+++ b/exams/exam3.tex
@@ -102,10 +102,8 @@ status updates.
 %%   meta-data?  How does a relational database management system (RDBMS)
 %%   handle meta-data?  What type of meta-data does an RDBMS collect?
 
-\item ({\bf 3 Points}) What is {\em meta-data}?  How does the Java
-  Database Connectivity (JDBC) interface allow a programmer to access
-  various types of meta-data? What type of meta-data does an RDBMS
-  collect?
+\item ({\bf 3 Points}) What is {\em meta-data}?  How does the Java Database Connectivity (JDBC) interface allow a
+  programmer to access at least two types of meta-data? What type of meta-data does an RDBMS collect during operation?
 
 \end{enumerate}
 
