Fixed the question about XML and the querying. Points are correct.

--- a/exams/exam3.tex
+++ b/exams/exam3.tex
@@ -403,28 +403,23 @@ status updates.
  
 \newpage
 
-\item ({\bf 10 Points}) The eXtensible Markup Language (XML) can be
-  used to store semi-structured data.  Answer the following questions
-  about XML.
+\item ({\bf 10 Points}) The eXtensible Markup Language (XML) can be used to store semi-structured data.  Answer the
+  following questions about the XML format.
 
   \begin{enumerate}
     
-    \item ({\bf 4 Points}) XQuery is often described as being the
-      ``standard'' query language for XML.  What are the FLWOR
-      expressions that you can write in XQuery?
+    \item ({\bf 5 Points}) XQuery is often described as being the ``standard'' query language for XML.  What are the
+      FLWOR expressions that you can write in XQuery?
 
-      \item ({\bf 3 Points}) What is DOM?  What is SAX?  How are these
-      two technologies similar to and different from each other?  Your
-      response should contain a detailed analysis of the trade-offs 
-      associated with using these different APIs.
+      \item ({\bf 2 Points}) What is DOM?  What is SAX?  How are these two technologies similar to and different from
+        each other?  Your response should contain a detailed analysis of the trade-offs associated with using these
+        different APIs.
 
-    \item ({\bf 3 Points}) Recent empirical results suggest that the
-      XML format is very {\em compressible}.  What does it mean if a
-      data storage format is highly compressible?  Why is XML very
-      compressible?  You should support your response to this question
-      with concrete examples and equations.  In particular, you should
-      furnish an equation that shows how to calculate the percent
-      change in the size of an uncompressed and compressed XML file.
+    \item ({\bf 3 Points}) Recent empirical results suggest that the XML format is very {\em compressible}.  What does
+      it mean if a data storage format is highly compressible?  Why is XML very compressible?  You should support your
+      response to this question with concrete examples and equations.  In particular, you must furnish, explain, and
+      reference an equation that shows how to calculate the percent change in the size of an XML file that results from
+      the use of  compression.
 
     \end{enumerate}
 
