Fixed the question eight about XML.

--- a/exams/exam3.tex
+++ b/exams/exam3.tex
@@ -404,7 +404,7 @@ status updates.
 \newpage
 
 \item ({\bf 10 Points}) The eXtensible Markup Language (XML) can be used to store semi-structured data.  Answer the
-  following questions about the XML format.
+  following questions about the XML format. 
 
   \begin{enumerate}
     
@@ -419,7 +419,7 @@ status updates.
       it mean if a data storage format is highly compressible?  Why is XML very compressible?  You should support your
       response to this question with concrete examples and equations.  In particular, you must furnish, explain, and
       reference an equation that shows how to calculate the percent change in the size of an XML file that results from
-      the use of  compression.
+      the use of compression. 
 
     \end{enumerate}
 
@@ -447,16 +447,16 @@ status updates.
 
       \end{enumerate}
 
-  \item ({\bf 3 Points}) Many authors suggest that XML is a very {\em
-    verbose} data storage format.  Do you agree with this statement?
-    Why or why not? Using the XML file in Figure~\ref{figure:xml}, you
-    should provide evidence to support your response.
+  \item ({\bf 2 Points}) Many authors suggest that XML is a very {\em verbose} data storage format.  Do you agree with
+    this statement?  Why or why not? Using the XML file in Figure~\ref{figure:xml}, you should provide evidence to
+    support your response.
 
-  \item ({\bf 3 Points}) In some situations, it may be useful to store
-    an XML document inside of a database.  If you were required to use
-    a relational database, then how would you store an XML document
-    inside of it?  If you could pick any type of database, then how
-    would you store the XML file?
+  \item ({\bf 2 Points}) In some situations, it may be useful to store an XML document inside of a database.  If you
+    were required to use a relational database, then how would you store an XML document inside of it?  If you could
+    pick any type of database, then how would you use it to store the XML file?
+
+  \item ({\bf 2 Point}) Both XML and HTML are examples of ``markup languages''. What are the most important similarities
+    and differences between these two langauges?
 
   \end{enumerate}
 
