Working on the questions about data mining. Now, on the last question.

--- a/exams/exam3.tex
+++ b/exams/exam3.tex
@@ -489,8 +489,8 @@ status updates.
 
 \newpage
 
-\item ({\bf 10 Points}) Answer the following questions about database
-  applications and their use during data mining and warehousing.
+\item ({\bf 10 Points}) Answer the following questions about database applications and their use during the pdata mining
+  and data warehousing processes.
 
   \begin{enumerate}
 
@@ -506,14 +506,21 @@ status updates.
   %%   should include a detailed diagram of the architecture of a data
   %%   warehouse.
 
-  \item ({\bf 4 Points}) Many data warehousing applications implement
-    something called {\em OLAP}.  After defining each of the letters
-    in OLAP, please explain how it connects to data warehousing.
+  % \item ({\bf 4 Points}) Many data warehousing applications implement
+  %   something called {\em OLAP}.  After defining each of the letters
+  %   in OLAP, please explain how it connects to data warehousing.
 
-  \item ({\bf 4 Points}) Data warehouses often contain large data sets
-    with a mixture of {\em categorical} and {\em numerical}
-    attributes.  As part of your response to this question, please
-    define and give an example of these two types of attributes.
+  \item ({\bf 2 Points}) In constrast to the traditional row-oriented relational database, it is also possible to
+    implement and use a column-oriented databases. For each category, please describe a query pattern that, when run on
+    a column-oriented database, will result in (i) exceptional performance and (ii) poor performance. 
+
+  \item ({\bf 2 Points}) Data warehouses often contain large data sets with a mixture of {\em categorical} and {\em
+    numerical} attributes.  As part of your response to this question, please define and give an example of these two
+    types of attributes.
+
+  \item ({\bf 4 Points}) During the algorithm training and evaluation phases of data mining, it is common to use {\em
+    k-fold cross validation}. After explaining this process in detail---with both diagrams and natural langauge
+    sentences---you should justify its use during the process of data mining.
 
   %% \item ({\bf 2 Points}) The creators of MonetDB claim that a
   %%   column-oriented database supports effective data compression.
@@ -524,17 +531,14 @@ status updates.
 
 \newpage
 
-\item ({\bf 10 Points}) Answer the following questions about the use
-  of machine learning algorithms during the process of data mining and
-  data warehousing.
+\item ({\bf 10 Points}) Answer the following questions about the use of machine learning algorithms during the processes
+  of data mining and data warehousing.
 
   \begin{enumerate}
 
-  \item ({\bf 4 Points}) Machine learning algorithms generally focus
-    on {\em prediction} tasks in either a {\em classification} or a
-    {\em regression} framework.  Please define these two terms and
-    give an example of two separate data mining problems that would
-    respectively involve a regression or a classification.
+  \item ({\bf 4 Points}) Machine learning algorithms generally focus on prediction tasks in either a {\em
+    classification} or a {\em regression} framework.  Please define these two terms and give an example of two separate
+    data mining problems that would respectively involve a regression or a classification.
 
   \item ({\bf 4 Points}) Figure~\ref{figure:tree} gives an example of
     a regression tree that was constructed by the {\em recursive
