More to the last question. Will try to move a figure.

--- a/exams/exam3.tex
+++ b/exams/exam3.tex
@@ -537,7 +537,7 @@ status updates.
 
   \begin{enumerate}
 
-  \item ({\bf 4 Points}) Machine learning algorithms generally focus on prediction tasks in either a {\em
+  \item ({\bf 2 Points}) Machine learning algorithms generally focus on prediction tasks in either a {\em
     classification} or a {\em regression} framework.  Please define these two terms and give an example of two separate
     data mining problems that would respectively involve the completion of a regression or a classification task.
 
@@ -561,6 +561,9 @@ status updates.
 
       \item Do these trees represent the result of classification or regression? What characteristic(s) of the trees
         suggest that your response is correct?
+
+      \item Give a detailed description of a CPU configuration that yields high values for the ``perf'' attribute. How
+        does the tree help you to find this CPU design?
 
     \end{enumerate}
 
