Fixed the mistakes for question eight of the test.

--- a/exams/exam3.tex
+++ b/exams/exam3.tex
@@ -425,9 +425,8 @@ status updates.
 
 \newpage
 
-\item ({\bf 10 Points}) The eXtensible Markup Language (XML) is a
-  popular data interchange format.  Answer the following questions
-  about XML.
+\item ({\bf 10 Points}) The eXtensible Markup Language (XML) is a popular data interchange format.  Using
+  Figure~\ref{figure:xml} as appropriate, answer the following questions about XML.
 
   \begin{enumerate}
     
@@ -447,9 +446,9 @@ status updates.
 
       \end{enumerate}
 
-  \item ({\bf 2 Points}) Many authors suggest that XML is a very {\em verbose} data storage format.  Do you agree with
-    this statement?  Why or why not? Using the XML file in Figure~\ref{figure:xml}, you should provide evidence to
-    support your response.
+  \item ({\bf 2 Points}) Many authors suggest that XML is a very verbose data storage format.  Do you agree with this
+    statement?  Why or why not? Using the XML file in Figure~\ref{figure:xml}, you should provide evidence to support
+    your response.
 
   \item ({\bf 2 Points}) In some situations, it may be useful to store an XML document inside of a database.  If you
     were required to use a relational database, then how would you store an XML document inside of it?  If you could
