Fixing the final draft mistakes in the data mining questions.

--- a/exams/exam3.tex
+++ b/exams/exam3.tex
@@ -97,7 +97,7 @@ status updates.
   context of either a Java virtual machine (JVM) heap or an eXtensible
   markup language (XML) document.
 
-%% \item ({\bf 3 Points}) What is {\em meta-data}?  How does the Java
+%% \item ({\bf 3 Points}) What is {\em meta-data}?  ow does the Java
 %%   Database Connectivity (JDBC) interface support the collection of
 %%   meta-data?  How does a relational database management system (RDBMS)
 %%   handle meta-data?  What type of meta-data does an RDBMS collect?
@@ -309,9 +309,8 @@ status updates.
       can a programmer take to prevent from taking place and/or
       mitigate the risk of this type of attack?
 
-    \item ({\bf 3 Points}) What is {\em authentication}?  {\em
-      Authorization}?  How does the structured query language support
-      these two types of security features?
+    \item ({\bf 3 Points}) What is {\em authentication}?  {\em Authorization}?  How does the structured query language
+      support these two types of security features?
 
     %% \item ({\bf 4 Points}) What are the three {\em canonical
     %%   concurrency control} problems?  Your response should select one
@@ -488,7 +487,7 @@ status updates.
 
 \newpage
 
-\item ({\bf 10 Points}) Answer the following questions about database applications and their use during the pdata mining
+\item ({\bf 10 Points}) Answer the following questions about database applications and their use during the data mining
   and data warehousing processes.
 
   \begin{enumerate}
@@ -510,8 +509,8 @@ status updates.
   %   in OLAP, please explain how it connects to data warehousing.
 
   \item ({\bf 2 Points}) In constrast to the traditional row-oriented relational database, it is also possible to
-    implement and use a column-oriented databases. For each category, please describe a query pattern that, when run on
-    a column-oriented database, will result in (i) exceptional performance and (ii) poor performance. 
+    implement and use a column-oriented database. For each category, please describe a query pattern that, when run on a
+    column-oriented database, will result in (i) exceptional performance and (ii) poor performance. 
 
   \item ({\bf 2 Points}) Data warehouses often contain large data sets with a mixture of {\em categorical} and {\em
     numerical} attributes.  As part of your response to this question, please define and give an example of these two
@@ -562,12 +561,12 @@ status updates.
         suggest that your response is correct?
 
       \item Give a detailed description of a CPU configuration that yields high values for the ``perf'' attribute. How
-        does the tree help you to find this CPU design?
+        does a tree help you to find this CPU design?
 
     \end{enumerate}
 
   \item ({\bf 2 Points}) How would you use the regression tree in Figure~\ref{fig:trees} to perform prediction?  Your
-    response to this question should furnish a concrete example that explains how to predict with on of the trees that
+    response to this question should furnish a concrete example that explains how to predict with one of the trees that
     describe CPU performance.
 
   \item ({\bf 2 Points}) There are algorithms that use either {\em global} or {\em local} search heuristics to construct
